v0.4.0
--------------------------------------------------------------------------------
* h2 + h2-16 will be negiotiated/upgraded. Priority handling is implemented
   in nghttp2, however assigning requests to workers has currently not the
   necessary information.
 * Alt-Svc support based on https://http2.github.io/http2-spec/alt-svc.html#indicator
   Configuration directives "H2AltSvc" and "H2AltSvcMaxAge" added. Configurable
   per virtual host.
 * reduced lock contention and eliminated broadcast signalling on internal 
   condition variables, improved multi-thread performance

v0.3.1
--------------------------------------------------------------------------------
 * defining _GNU_SOURCE to pull in proper features and make APR header files
   happy, fixes #7 

v0.3.0
--------------------------------------------------------------------------------
 * new directory structure, all sandbox related parts have been moved to 
   own sandbox dir
 * non-sandbox configuration no longer triggers building of sandbox stuff
 * cleanup up distribution builds to have smaller and working tar balls

v0.2.2
--------------------------------------------------------------------------------
 * optimizations on response reads
 * being more apacheeeish, using APR_RINGs for queue handling
 * using openssl latest.tar.gz to retrieve latest openssl for sandbox
 * fixed crash in large request header handling
 * better flushing of stream io resulting in performance improvements
 * added sandbox tests for chunked responses of various sizes
 * integrated fix (https://github.com/icing/mod_h2/pull/5) from 
   Jonathan (invader444) to fix chunked encoding when converting http/1
   responses to http2 unchunked data.

v0.2.1
--------------------------------------------------------------------------------
 * changed apr_pool usage to have more recycling, 50% performance increase in 
   loadtest
 * added hack to enable mod_h2 to run in mpm_event (experimental)